feat(collection): implement collection management UI with sidebar, playlist table, and backend services

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,7 @@ AUTH_DISCORD_SECRET=""
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
+
+# Traktor Collection
+# Path to your Traktor collection.nml file
+COLLECTION_FILE=""
