--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "prisma": "7.0.0",
     "tailwindcss": "^4.0.15",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.27.0"
+    "typescript-eslint": "^8.27.0",
+    "vitest": "^4.0.16"
   },
   "ct3aMetadata": {
     "initVersion": "7.40.0"
