--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,10 @@ AUTH_DISCORD_SECRET=""
 AUTH_GOOGLE_ID=""
 AUTH_GOOGLE_SECRET=""
 
+# Discogs Provider
+DISCOGS_CLIENT_ID=""
+DISCOGS_CLIENT_SECRET=""
+
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
