--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "fast-xml-parser": "^5.3.3",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
+    "oauth-1.0a": "^2.2.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
