--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "oauth-1.0a": "^2.2.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-window": "^2.2.4",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.24.2"
