env example updated

--- a/.env.example
+++ b/.env.example
@@ -23,14 +23,26 @@ AUTH_DISCORD_SECRET=""
 AUTH_GOOGLE_ID=""
 AUTH_GOOGLE_SECRET=""
 
+# Google Gemini API Key
+GOOGLE_API_KEY=""
+
 # Discogs Provider
 DISCOGS_CLIENT_ID=""
 DISCOGS_CLIENT_SECRET=""
+
+# Soulseek instance
+SLSKD_URL=""
+SLSKD_API_KEY=""
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
 
-# Traktor Collection
-# Path to your Traktor collection.nml file
-COLLECTION_FILE=""
+# Vercel Storage
+STORAGE_DATABASE_URL=""
+STORAGE_POSTGRES_URL=""
+
+STORAGE_PRISMA_DATABASE_URL=""
+
+VERCEL_OIDC_TOKEN=""
+
